--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sandhyadeepch/personal-site.git"
+    "url": "git+https://github.com/sandhyadeepch/personal-site.git"
   },
   "engines": {
     "node": ">=14.x"
@@ -62,5 +62,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Sandhya R Marri personal site",
+  "bugs": {
+    "url": "https://github.com/sandhyadeepch/personal-site/issues"
+  },
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "author": ""
 }
